# jsonrpc-client-rs

./: .travis.yml  CHANGELOG.md  COPYRIGHT  Cargo.toml  README.md  appveyor.yml
core/: Cargo.toml
core/src/: example.rs  id_generator.rs  lib.rs  macros.rs  response.rs  select_weak.rs  server.rs
http/: Cargo.toml  README.md
http/src/: client_builder.rs  client_creator.rs  lib.rs
http/tests/: custom_headers.rs  localhost.rs  timeout.rs
http/tests/common/: mock_rpc.rs  mod.rs  test_server.rs
ipc/: Cargo.toml
ipc/src/: lib.rs
newhttp/: Cargo.toml
newhttp/examples/: simple.rs
newhttp/src/: lib.rs  timeout.rs
newhttp/tests/: localhost.rs  timeout.rs
newhttp/tests/common/: mod.rs
pubsub/: Cargo.toml
pubsub/src/: lib.rs
utils/: Cargo.toml
utils/src/: lib.rs
ws/: Cargo.toml
ws/src/: lib.rs
