[package]
name = "jsonrpc-client-core"
version = "0.2.1"
authors = ["Mullvad VPN <admin@mullvad.net>", "Linus Färnstrand <linus@mullvad.net>"]
description = "A crate for generating transport agnostic, auto serializing, strongly typed JSON-RPC 2.0 clients"
readme = "../README.md"
keywords = ["jsonrpc", "rpc", "json-rpc", "client", "macros"]
categories = ["encoding", "parsing", "network-programming", "web-programming"]
repository = "https://github.com/mullvad/jsonrpc-client-rs"
license = "MIT/Apache-2.0"

[dependencies]
error-chain = "0.11"
futures = "0.1"
jsonrpc-core = "8.0"
log = "0.3"
serde = "1.0"
serde_json = "1.0"


[badges]
travis-ci = { repository = "mullvad/jsonrpc-client-rs" }
appveyor = { repository = "mullvad/jsonrpc-client-rs" }

