[package]
name = "jsonrpc-client-http"
version = "0.1.0"
authors = ["Mullvad VPN <admin@mullvad.net>", "Linus Färnstrand <linus@mullvad.net>"]
description = "A transport implementation for jsonrpc-client-core based on Hyper and futures"
keywords = ["jsonrpc", "rpc", "client", "http", "https"]
categories = ["network-programming", "web-programming", "web-programming::http-client"]
repository = "https://github.com/mullvad/jsonrpc-client"
license = "MIT/Apache-2.0"

[dependencies]
error-chain = "0.10"
futures = "0.1"
hyper = "0.11"
hyper-tls = "0.1"
jsonrpc-client-core = "0.1"
tokio-core = "0.1"
