[package]
name = "jsonrpc-client-http"
version = "0.1.0"
authors = ["Mullvad VPN <admin@mullvad.net>", "Linus Färnstrand <linus@mullvad.net>"]
description = "A transport implementation for jsonrpc-client-core based on Hyper and futures"
readme = "README.md"
keywords = ["jsonrpc", "rpc", "client", "http", "https"]
categories = ["network-programming", "web-programming", "web-programming::http-client"]
repository = "https://github.com/mullvad/jsonrpc-client"
license = "MIT/Apache-2.0"

[dependencies]
error-chain = "0.10"
futures = "0.1.15"
hyper = "0.11"
hyper-tls = { version = "0.1", optional = true }
native-tls = { version = "0.1", optional = true }
jsonrpc-client-core = { path = "../core" }
log = "0.3"
tokio-core = "0.1"

[features]
default = ["tls"]
tls = ["hyper-tls", "native-tls"]

[dev-dependencies]
env_logger = "*"
jsonrpc-core = "7.1.0"
jsonrpc-macros = "7.1.0"
jsonrpc-http-server = "7.1.0"
