[package]
name = "jsonrpc-client-http"
version = "0.2.2"
authors = ["Mullvad VPN <admin@mullvad.net>", "Linus Färnstrand <linus@mullvad.net>"]
description = "A transport implementation for jsonrpc-client-core based on Hyper and futures"
readme = "README.md"
keywords = ["jsonrpc", "rpc", "client", "http", "https"]
categories = ["network-programming", "web-programming", "web-programming::http-client"]
repository = "https://github.com/mullvad/jsonrpc-client-rs"
license = "MIT/Apache-2.0"

[dependencies]
error-chain = "0.11"
futures = "0.1.15"
hyper = "0.11"
hyper-tls = { version = "0.1", optional = true }
native-tls = { version = "0.1", optional = true }
log = "0.3"
tokio-core = "0.1"

jsonrpc-client-core = { version = "0.2.1", path = "../core" }

[features]
default = ["tls"]
tls = ["hyper-tls", "native-tls"]

[dev-dependencies]
env_logger = "0.4"
jsonrpc-core = "8.0"
jsonrpc-macros = "8.0"
jsonrpc-http-server = "8.0"


[badges]
travis-ci = { repository = "mullvad/jsonrpc-client-rs" }
appveyor = { repository = "mullvad/jsonrpc-client-rs" }
