[package]
name = "jsonrpc-client-ipc"
version = "0.5.0"
authors = ["Emīls Piņķis <emils@mullvad.net>"]

[dependencies]
error-chain = "0.12"
futures = "0.1"
jsonrpc-server-utils = "8"
parity-tokio-ipc = { git = "https://github.com/mullvad/parity-tokio-ipc", rev = "add-client-support" }
tokio = "0.1"
tokio-io = "0.1"
tokio-core = "0.1"
jsonrpc-client-core = { version = "0.5", path = "../core" }
