[package]
name = "jsonrpc-client-newhttp"
version = "0.5.0"
authors = ["Mullvad VPN <admin@mullvad.net>", "Linus Färnstrand <linus@mullvad.net>"]
description = "A transport implementation for jsonrpc-client-core based on Hyper"
#readme = "README.md"
keywords = ["jsonrpc", "rpc", "client", "http", "https"]
categories = ["network-programming", "web-programming", "web-programming::http-client"]
repository = "https://github.com/mullvad/jsonrpc-client-rs"
license = "MIT/Apache-2.0"
edition = "2018"

[dependencies]
err-derive = "0.1.5"
futures = "0.1.25"
hyper = "0.12"
log = "0.4"
jsonrpc-client-core = { version = "0.5", path = "../core" }
tokio-timer = "0.2.10"

[dev-dependencies]
hyper-rustls = "0.16"
tokio = "0.1"
env_logger = "0.6.0"

[badges]
travis-ci = { repository = "mullvad/jsonrpc-client-rs" }
appveyor = { repository = "mullvad/jsonrpc-client-rs" }
