[package]
name = "jsonrpc-client-pubsub"
version = "0.1.0"
authors = ["Emīls Piņķis <emils@mullvad.net>"]

[dependencies]
jsonrpc-client-core = { version = "0.5", path = "../core" }
jsonrpc-client-utils = { path = "../utils" }
futures = "~0.1.24"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
tokio = "0.1"
log = "0.4"
